Refactor API files to use ES module syntax and improve code consistency
- Converted CommonJS module syntax to ES module syntax across multiple files, enhancing compatibility with modern JavaScript standards.
- Updated import statements to use named imports for better clarity and consistency.
- Refactored environment configuration loading to streamline dotenv usage.
- Improved error handling and logging in various API routes and utilities.
- Adjusted TypeScript configuration for better module resolution and path handling.
- Enhanced site management logic to utilize updated database schema and improve overall code readability.

--- a/server/tsconfig.server.json
+++ b/server/tsconfig.server.json
@@ -1,8 +1,8 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-      "outDir": "api",
-      "rootDir": "..",
+      "outDir": "../api",
+      "rootDir": ".",
       "noEmit": false,
       "module": "nodenext",
       "moduleResolution": "nodenext",
@@ -11,12 +11,8 @@
       "skipLibCheck": true,
       "esModuleInterop": true,
       "resolveJsonModule": true,
-      "baseUrl": "..", 
-      "paths": {
-        "@/*": ["./server/*"]
-        // "@shared/*": ["../shared/*"], // <--- REMOVE OR COMMENT OUT
-        // "shared/*": ["../shared/*"]    // <--- REMOVE OR COMMENT OUT
-      }
+      "baseUrl": ".", 
+      "paths": {}
     },
     "include": [
       "./**/*"
@@ -24,6 +20,7 @@
     "exclude": [
       "node_modules",
       "**/*.test.ts",
-      "**/*.spec.ts"
+      "**/*.spec.ts",
+      "../vite.config.mjs"
     ]
   }
