Refactor API routing and enhance Vercel configuration
- Updated Vercel configuration to improve routing for API endpoints, including specific routes for health checks and site management.
- Refactored API structure to utilize a centralized router for better organization and maintainability.
- Enhanced logging for API requests and health checks to facilitate debugging and monitoring.
- Removed deprecated environment configuration files and streamlined the loading process for improved clarity.

--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,29 @@
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { 
+      "src": "/api/v1/sites(.*)", 
+      "dest": "/api/v1/sites.js" 
+    },
+    { 
+      "src": "/api/health", 
+      "dest": "/api/health.js" 
+    },
+    { 
+      "src": "/test-vercel", 
+      "dest": "/api/index.js" 
+    },
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/api/index.js" 
+    },
     { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))", "dest": "/$1" },
     { "src": "/dashboard/site/[^/]+/(appearance|app-store|billing|content|design-studio|people|reports|settings|site-config).*", "dest": "/index.html" },
     { "src": "/dashboard.*", "dest": "/index.html" },
     { "src": "/sites.*", "dest": "/index.html" },
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
