--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,12 @@
   "rewrites": [
     { "source": "/api/v1/:path*", "destination": "/api/v1" },
     { "source": "/api", "destination": "/api/api.js" },
-    { "source": "/test-vercel", "destination": "/api/api.js" }
+    { "source": "/test-vercel", "destination": "/api/api.js" },
+    { "source": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))", "destination": "/$1" },
+    { "source": "/dashboard/site/:siteId/(appearance|app-store|billing|content|design-studio|people|reports|settings|site-config).*", "destination": "/index.html" },
+    { "source": "/dashboard/:path*", "destination": "/index.html" },
+    { "source": "/sites/:path*", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "functions": {
     "api/**/*.js": {
@@ -15,13 +20,6 @@
       "maxDuration": 10
     }
   },
-  "routes": [
-    { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))", "dest": "/$1" },
-    { "src": "/dashboard/site/[^/]+/(appearance|app-store|billing|content|design-studio|people|reports|settings|site-config).*", "dest": "/index.html" },
-    { "src": "/dashboard.*", "dest": "/index.html" },
-    { "src": "/sites.*", "dest": "/index.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ],
   "env": {
     "NODE_ENV": "production"
   }
