--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     { "source": "/api/v1/:path*", "destination": "/api/v1" },
     { "source": "/api", "destination": "/api/api.js" },
     { "source": "/test-vercel", "destination": "/api/api.js" },
-    { "source": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))", "destination": "/$1" },
+    { "source": "/:file(.*\\.(?:js|css|png|jpg|jpeg|svg|ico|json))", "destination": "/:file" },
     { "source": "/dashboard/site/:siteId/(appearance|app-store|billing|content|design-studio|people|reports|settings|site-config).*", "destination": "/index.html" },
     { "source": "/dashboard/:path*", "destination": "/index.html" },
     { "source": "/sites/:path*", "destination": "/index.html" },
