--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build:client": "vite build",
     "build:server": "tsc -p server/tsconfig.server.json",
-    "build": "npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server && node scripts/build.mjs",
     "start": "NODE_ENV=production node api/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
