--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
+    "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/cors": "^2.8.18",
     "@types/react-lottie": "^1.2.10",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@vueuse/core": "^13.2.0",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
@@ -66,6 +66,8 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "motion": "^12.12.1",
+    "motion-v": "^1.1.0-alpha.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.4.5",
@@ -77,8 +79,6 @@
     "react-lottie": "^1.2.10",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
@@ -86,6 +86,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@inspira-ui/plugins": "^0.0.1",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
@@ -100,11 +101,15 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
+    "tailwind-merge": "^3.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.14"
