--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "db:migrate:posts": "npm run db:migrate:posts:step1 && npm run db:migrate:posts:step2 && npm run db:migrate:posts:step3 && npm run db:migrate:posts:step4 && npm run db:migrate:posts:step5",
     "db:migrate:spaces": "NODE_ENV=development tsx server/db/update-spaces-table.ts",
     "db:migrate:space-cms-type": "NODE_ENV=development tsx server/db/add-space-cms-type.ts",
+    "db:migrate:sites-space-ids": "NODE_ENV=development tsx server/db/add-sites-space-ids.ts",
     "db:check:migration": "NODE_ENV=development tsx server/db/check-migration.ts"
   },
   "dependencies": {
