Update build commands in package.json and vercel.json for improved deployment process
- Modified the build commands to include a cleanup script and separate client and server build processes, enhancing the deployment workflow.
- Ensured consistency in build commands across both package.json and vercel.json for streamlined operations.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "bash scripts/cleanup-api.sh && npm run build:client && npm run build:server && node scripts/build.mjs",
   "outputDirectory": "dist/public",
   "framework": "vite",
   "devCommand": "npm run dev",
