Add new migration scripts and update database schema for CMS types
- Introduced migration scripts to create and update the `cms_types` table, enhancing content type management.
- Added new fields to the `spaces` and `posts` tables to support dynamic content handling.
- Implemented scripts to populate CMS types and update existing records, ensuring data integrity.
- Enhanced API routes for managing CMS types, including creation, retrieval, and deletion functionalities.
- Improved logging and error handling throughout the migration and API processes for better tracking and debugging.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "db:migrate:spaces": "NODE_ENV=development tsx server/db/update-spaces-table.ts",
     "db:migrate:space-cms-type": "NODE_ENV=development tsx server/db/add-space-cms-type.ts",
     "db:migrate:sites-space-ids": "NODE_ENV=development tsx server/db/add-sites-space-ids.ts",
-    "db:check:migration": "NODE_ENV=development tsx server/db/check-migration.ts"
+    "db:check:migration": "NODE_ENV=development tsx server/db/check-migration.ts",
+    "update-images": "node --experimental-specifier-resolution=node scripts/update-image-urls.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -63,6 +64,7 @@
     "@types/cors": "^2.8.18",
     "@types/pg": "^8.15.2",
     "@types/react-lottie": "^1.2.10",
+    "@vercel/postgres": "^0.10.0",
     "@vueuse/core": "^13.2.0",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
