--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_ENV=production node api/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "vercel-build": "bash scripts/cleanup-api.sh && npm run build:client && npm run build:server && node scripts/build.mjs",
+    "vercel-build": "bash scripts/cleanup-api.sh && npm run build:client && npm run build:server && node scripts/build.mjs && bash scripts/fix-build.sh",
     "db:migrate:posts:step1": "NODE_ENV=development tsx server/db/create-posts-migration.ts",
     "db:migrate:posts:step2": "NODE_ENV=development tsx server/db/migrate-data-to-posts.ts",
     "db:migrate:posts:step3": "NODE_ENV=development tsx server/db/remove-columns.ts",
