--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build:client": "vite build",
     "build:server": "tsc -p server/tsconfig.server.json",
-    "prebuild": "bash scripts/cleanup-api.sh",
-    "build": "npm run prebuild && npm run build:client && npm run build:server && node scripts/build.mjs",
+    "build": "npm run build:client && npm run build:server && node scripts/build.mjs",
     "start": "NODE_ENV=production node api/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
