--- a/vercel.json
+++ b/vercel.json
@@ -41,10 +41,19 @@
     "api/**/*.js": {
       "memory": 1024,
       "maxDuration": 10
+    },
+    "api/index.js": {
+      "maxDuration": 300
     }
   },
   "env": {
     "NODE_ENV": "production", 
-    "VERCEL": "1"
+    "VERCEL": "1",
+    "VITE_API_BASE_URL": ""
+  },
+  "build": {
+    "env": {
+      "VITE_API_BASE_URL": ""
+    }
   }
 } 
