Fix Vercel deployment: Add getApiBaseUrl alias and fix client build

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
   "buildCommand": "npm run vercel-build",
-  "outputDirectory": "dist/public",
-  "framework": "vite",
-  "devCommand": "npm run dev",
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/sites",
+      "permanent": false
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
