Update Vercel build command to include additional steps for public directory preparation

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npm run build && bash scripts/fix-vercel-build.sh && mkdir -p public && cp -r dist/public/* public/",
   "redirects": [
     {
       "source": "/",
