--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "NODE_ENV=production node api/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "vercel-build": "bash scripts/prepare-vercel.sh",
+    "_vercel-build_old": "bash scripts/prepare-vercel.sh",
     "db:migrate:posts:step1": "NODE_ENV=development tsx server/db/create-posts-migration.ts",
     "db:migrate:posts:step2": "NODE_ENV=development tsx server/db/migrate-data-to-posts.ts",
     "db:migrate:posts:step3": "NODE_ENV=development tsx server/db/remove-columns.ts",
