--- a/server/tsconfig.server.json
+++ b/server/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-      "outDir": "../api",
+      "outDir": "./dist",
       "rootDir": ".",
       "noEmit": false,
       "module": "nodenext",
@@ -21,6 +21,7 @@
       "node_modules",
       "**/*.test.ts",
       "**/*.spec.ts",
-      "../vite.config.mjs"
+      "../vite.config.mjs",
+      "./dist"
     ]
   }
