--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm run build && bash scripts/fix-vercel-build.sh && mkdir -p public && cp -r dist/public/* public/",
+  "buildCommand": "npm run build && bash scripts/fix-vercel-build.sh",
+  "outputDirectory": "public",
   "redirects": [
     {
       "source": "/",
@@ -32,8 +33,8 @@
     }
   ],
   "rewrites": [
-    { "source": "/api/v1/:path*", "destination": "/api/vercel-handler.js" },
-    { "source": "/api/:path*", "destination": "/api/vercel-handler.js" },
+    { "source": "/api/v1/(.*)", "destination": "/api/vercel-handler.js" },
+    { "source": "/api/(.*)", "destination": "/api/vercel-handler.js" },
     { "source": "/:file(.*\\.(?:js|css|png|jpg|jpeg|svg|ico|json))", "destination": "/:file" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
@@ -45,12 +46,6 @@
   },
   "env": {
     "NODE_ENV": "production", 
-    "VERCEL": "1",
-    "VITE_API_BASE_URL": ""
-  },
-  "build": {
-    "env": {
-      "VITE_API_BASE_URL": ""
-    }
+    "VERCEL": "1"
   }
 } 
