--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@blocknote/core": "^0.32.0-hackdays.0",
+    "@blocknote/mantine": "^0.32.0-hackdays.0",
+    "@blocknote/react": "^0.32.0-hackdays.0",
+    "@editorjs/paragraph": "^2.11.7",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -84,6 +88,9 @@
     "react-lottie": "^1.2.10",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.13.0",
+    "slate": "^0.115.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.114.2",
     "slugify": "^1.6.6",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
