--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "memorystore": "^1.6.7",
     "motion": "^12.12.1",
     "motion-v": "^1.1.0-alpha.1",
+    "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.0",
@@ -92,6 +93,7 @@
     "slate-history": "^0.113.1",
     "slate-react": "^0.114.2",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.5",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
