--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "csstype": "^3.1.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
@@ -122,7 +123,7 @@
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
