--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "memorystore": "^1.6.7",
     "motion": "^12.12.1",
     "motion-v": "^1.1.0-alpha.1",
+    "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
