--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@blocknote/core": "^0.32.0-hackdays.0",
     "@blocknote/mantine": "^0.32.0-hackdays.0",
     "@blocknote/react": "^0.32.0-hackdays.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@editorjs/paragraph": "^2.11.7",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
