--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.2",
@@ -47,13 +47,13 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-query": "^5.60.5",
@@ -93,6 +93,7 @@
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "react-resizable-panels": "^2.1.4",
+    "react-use-measure": "^2.1.7",
     "recharts": "^2.13.0",
     "slate": "^0.115.1",
     "slate-history": "^0.113.1",
